<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <PreferenceCategory 
        android:key="read_settings"
        android:title="@string/user_center" >
        
        <PreferenceScreen 
            android:key="click_about"
            android:title="@string/about"
            android:summary="软件版本：1.6" />              
        <PreferenceScreen 
            android:key="click_feedback"
            android:title="@string/feedback" 
            android:summary="提交软件错误反馈或建议" />             
        <PreferenceScreen 
            android:key="click_share"
            android:title="@string/share_settings" 
            android:summary="分享到微博、空间设置" />   
        <CheckBoxPreference  
            android:key="auto_update"
            android:title="@string/auto_update" 
            android:summaryOn="打开自动检测更新"
            android:summaryOff="关闭自动检测更新"
            android:defaultValue="true" 
            android:enabled="true"/>
        <CheckBoxPreference  
            android:key="allow_gprs"
            android:title="@string/allow_gprs" 
            android:summaryOn="允许使用数据流量"
            android:summaryOff="不允许使用数据流量"
            android:defaultValue="false" 
            android:enabled="true"/>          
    </PreferenceCategory>
      
    <PreferenceCategory 
        android:key="read_settings"
        android:title="@string/read_settings" >            
        <ListPreference             
            android:key="font_size"
            android:title="@string/font_size"
            android:summary="选择合适的阅读字号"
            android:defaultValue="20"
            android:entryValues="@array/font_size_value" 
            android:entries="@array/font_size_entry" 
            android:dialogTitle="选择字号"/>
        <CheckBoxPreference  
            android:key="always_bright"
            android:title="@string/always_bright" 
            android:summaryOn="背景灯常亮"
            android:summaryOff="背景灯随系统控制"
            android:defaultValue="false" 
            android:enabled="true"/>
        <CheckBoxPreference  
            android:key="theme_black"
            android:title="@string/theme_black" 
            android:summaryOn="使用深色主题"
            android:summaryOff="使用浅色主题"
            android:defaultValue="false" 
            android:enabled="true"/>
        <CheckBoxPreference  
            android:key="show_color"
            android:title="@string/show_color" 
            android:summaryOn="高亮显示"
            android:summaryOff="不高亮显示"
            android:defaultValue="true" 
            android:enabled="true"/>
    </PreferenceCategory>

</PreferenceScreen>