<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="12dp"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">

	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/bible_verse"
	        android:textSize="16sp" />
	    <TextView
	        android:id="@+id/text_verse"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />
	    
	    <Button
	        android:id="@+id/button_share"
	        android:layout_width="match_parent"
	        android:layout_height="42dp"
	        android:layout_gravity="center"
	        android:text="@string/share_verse"
	        android:textSize="20sp" />
	
	    <LinearLayout
	        android:id="@+id/layout_status"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:layout_marginTop="12dp">
		
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/last_mark"
		        android:textSize="16sp"
                android:layout_marginTop="10dp"/>
		    <TextView
		        android:id="@+id/text_mark"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp" />
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/last_read"
		        android:textSize="16sp"
                android:layout_marginTop="10dp"/>
		    <TextView
		        android:id="@+id/text_last"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp" />

		</LinearLayout>
	</LinearLayout>
</ScrollView>