<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/default_margin"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">

	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/bible_verse"
	        android:textSize="@dimen/small_font_size" />
	    <TextView
	        android:id="@+id/text_home_verse"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/default_font_size" />
	    
	    <Button
	        android:id="@+id/button_home_share"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/default_button_height"
	        android:layout_gravity="center"
	        android:text="@string/share_verse"
	        android:textSize="@dimen/default_font_size" />
	
	    <LinearLayout
	        android:id="@+id/layout_home_status"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:layout_marginTop="@dimen/default_margin">
		
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/last_mark"
		        android:textSize="@dimen/small_font_size"
                android:layout_marginTop="10dp"/>
		    <TextView
		        android:id="@+id/text_home_mark"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/default_font_size" />
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/last_read"
		        android:textSize="@dimen/small_font_size"
                android:layout_marginTop="10dp"/>
		    <TextView
		        android:id="@+id/text_home_last"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/default_font_size" />

		</LinearLayout>
	</LinearLayout>
</ScrollView>